#6 #close Added home icon

--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ header {
 
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
 }
 /*.form-section, .tables-section {
     flex: 1;
